ESLint: Migrate eslint configurations
+ migrate EcmaFeature options to the global parserOptions property

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -70,16 +70,8 @@ rules: # http://eslint.org/docs/rules
 
   # ES6
 
+  ecmaVersion: 6
   prefer-arrow-callback: [1]
-
-
-  # Overrides to `eslint:recommended` rule set
-
-  no-console: [0]
-
-extends: "eslint:recommended"
-
-ecmaFeatures:
   arrowFunctions: true
   blockBindings: true
   defaultParams: true
@@ -87,3 +79,10 @@ ecmaFeatures:
   forOf: true
   spread: true
   templateStrings: true
+
+  # Overrides to `eslint:recommended` rule set
+
+  no-console: [0]
+
+extends: "eslint:recommended"
+
