Complete exercises for Chapter 06
+ Complete Chapter 06 Exercise 01: Vector
+ Complete Chapter 06 Exercise 02: Group
+ Complete Chapter 06 Exercise 03: Iterable Group
+ Complete Chapter 06 Exercise 04: Borrowing A Method

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -80,6 +80,8 @@ parserOptions:
   forOf: true
   spread: true
   templateStrings: true
+  sourceType: module
+
 
   # Overrides to `eslint:recommended` rule set
 
