--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -63,13 +63,14 @@ rules: # http://eslint.org/docs/rules
   no-lonely-if: [2]
   no-trailing-spaces: [2]
   no-unneeded-ternary: [2]
-  quotes: [2, "backtick"]
+  quotes: [2, "double"]
   semi: [2, "always"]
   spaced-comment: [2, "always"]
   wrap-regex: [2]
 
   # ES6
 
+parserOptions:
   ecmaVersion: 6
   prefer-arrow-callback: [1]
   arrowFunctions: true
