eslint: unset impliedStrict setting
We disable the impliedStrict rule because vim automatically appends
'use strict' to any .js file

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -81,6 +81,7 @@ parserOptions:
   spread: true
   templateStrings: true
   sourceType: module
+  impliedStrict: false
 
 
   # Overrides to `eslint:recommended` rule set
