--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -19,7 +19,7 @@ rules: # http://eslint.org/docs/rules
 
   curly: [2]
   dot-notation: [2]
-  eqeqeq: [2]
+  eqeqeq: ["error", "always", {"null": "ignore"}]
   guard-for-in: [2]
   no-div-regex: [2]
   no-eval: [2]
@@ -71,7 +71,7 @@ rules: # http://eslint.org/docs/rules
   # ES6
 
 parserOptions:
-  ecmaVersion: 6
+  ecmaVersion: 2017
   prefer-arrow-callback: [1]
   arrowFunctions: true
   blockBindings: true
