--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -57,7 +57,7 @@ rules: # http://eslint.org/docs/rules
   comma-style: [2, "last"]
   consistent-this: [2, "self"]
   eol-last: [2]
-  indent: [2, 2, {"VariableDeclarator": { "var": 2, "let": 2, "const": 3}}]
+  indent: [2, 2, {"VariableDeclarator": { "var": 2, "let": 2, "const": 3}}, {"SwitchCase": 1}]
   linebreak-style: [2, "unix"]
   newline-after-var: [2]
   no-lonely-if: [2]
