Complete Chapter 20 Exercises
+ Complete Chapter 20 Exercise 01: Grep
+ Complete Chapter 20 Exercise 02: Directory Creation
+ Complete Chapter 20 Exercise 03: Public Space on the Web
+ See README.md for full change list

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 *.zip
+*/node_modules/*
+Chapter 20/public_html/**/*
+
+!Chapter 20/public_html/README.md
+!Chapter 20/public_html/index.html
+!Chapter 20/public_html/index.js
+!Chapter 20/public_html/style.css
